| Summary: | ASTERISK-22114: [patch] res_pjsip - 'domain_alias' config object XML help doesn't make it clear that the name used for the object is the domain alias | ||
| Reporter: | Rusty Newton (rnewton) | Labels: | |
| Date Opened: | 2013-07-18 19:03:41 | Date Closed: | 2013-08-17 12:56:01 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip |
| Versions: | SVN 12 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Trunk | Attachments: | ( 0) res_sip.patch |
| Description: | The 'domain_alias' config help doesn't make it clear that the name used for the object should be the domain alias.
Attaching patch to give it some clarity. | ||
| Comments: | |||